# TFCraft

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: cmake-single-platform.yml
TFCraft-libs/glad/include/glad/: glad.h
assets/shaders/: terrain.frag  terrain.vert  vertex.glsl
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: FastNoise.cpp  camera.cpp  camera.hpp  chunk.cpp  chunk.hpp  colliders.cpp  colliders.hpp  glad.c  main.cpp  noise.cpp  noise.hpp  scenes.cpp  scenes.hpp
src/engine/: engine.cpp  engine.h  engine.hpp  global.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  timer.cpp  timer.hpp
src/engine/graphics/: mesh.cpp
src/engine/io/: input.hpp  logger.cpp  logger.hpp  window.cpp  window.hpp
src/engine/util/: maths.cpp  time.cpp
src/world/: chunk.cpp  chunk.hpp  world.cpp  world.hpp
